# containerized_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
docs/: BASETOOL_AND_RUNNABLECONFIG.md  CONTAINERIZED_AGENT_GUIDE.md
tools/: celsius_farenheit.py  fahreheit_celsius.py  feet_meters.py  meters_feet.py
