[project]
name = "containerized_agent"
version = "0.1.0"
description = """
A demo repo for building a LangChain/LangGraph agent (unit conversion tools,
DTOs, middleware) and running it in Docker. Covers agent design with custom
state and structured output, plus containerization from Dockerfile to docker run.
Run locally with uv or in a container; includes step-by-step guides for both.
"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.3",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.11",
]
